# Timefrugal-QA

./: .gitignore  .pre-commit-hooks.yaml  .timefrugal-qa.yml  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: auto-setup.yml  qa-reusable.yml  qa.yml  tts-worker.yml
qa_agent/: __init__.py  __main__.py  agent.py  ai_review.py  config.py  local_reporter.py  pr_reporter.py  repo_config.py  static_analysis.py
qa_agent/semgrep_rules/: python-quality.yml  python-security.yml
scripts/: run_local_qa.sh  setup_all_repos.sh  setup_new_repo.sh
templates/: repo_workflow.yml
tests/: test_agent.py  test_agent_run.py  test_ai_review.py  test_pr_reporter.py  test_repo_config.py  test_static_analysis.py
tts/: generate.py  narration.json  narration_chars.json  narration_kuber_neeti.json
